--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="titulo1">PARA TI!!!!!</h1>
         <h2>Cuya mirada es unica y me encanta.</h2>
         <p>
-        <video src="video mirada/TuMirada.mp4" controls class="videuwu"></video><br>
+        <video src="TuMirada.mp4" controls class="videuwu"></video><br>
          Este sitio fue diseñado y actualizado exclusivamente para una persona especial la cual quiero mucho❤️ ...... </b><br>
          <br> 
          <br> 
